--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
     "next": "^15.5.3",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "24.3.3",
-    "@types/react": "19.1.13"
+    "@types/react": "19.1.13",
+    "pagefind": "^1.4.0"
   }
 }
