--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.5.3",
     "nextra": "^4.4.0",
     "nextra-theme-docs": "^4.4.0",
