--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "mongodb": "^6.19.0",
     "next": "^15.5.3",
     "nextra": "^4.4.0",
     "nextra-theme-docs": "^4.4.0",
