--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "next --turbopack",
     "build": "next build",
     "start": "next start",
-    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
+    "postbuild": "node scripts/run-pagefind.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.32.0",
     "@vercel/analytics": "^1.5.0",
     "mongodb": "^6.19.0",
     "next": "^15.5.3",
