--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next --turbopack",
     "build": "next build",
     "start": "next start",
-    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
+    "postbuild": "pagefind --site .next/server/pages --output-path public/_pagefind"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.32.0",
